fix: overflow hidden on #root element

--- a/src/components/Header/components/Navbar/Navbar.css
+++ b/src/components/Header/components/Navbar/Navbar.css
@@ -3,6 +3,7 @@
   align-items: center;
   gap: 0.8rem;
   font-size: 1.2rem;
+  position: absolute;
 }
 .menu-ham-button {
   display: none;
